# cartesia-python

./: .bumpversion.toml  .fernignore  .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  MIGRATING.md  Makefile  README.md  api.md  bumpversion.py  mypy.ini  pyproject.toml  reference.md  release-please-config.json  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/workflows/: ci.yaml  ci.yml  publish-pypi.yml  publish.yaml  release-doctor.yml  release-please.yml  seal-dispatch.yml  stlc-promote.yml  stlc-sync-from-production.yml  trigger-back-sync-on-release.yml  trunk-sync-lock.yml
cartesia/: __init__.py  _async_sse.py  _async_websocket.py  _constants.py  _sse.py  _types.py  _websocket.py  async_client.py  async_tts.py  client.py  resource.py  tts.py  voice_changer.py  voices.py
cartesia/utils/: deprecated.py  retry.py  tts.py
examples/: async_examples.py  examples.py
scratch/: generate_samples.ipynb
scripts/: lint
scripts/utils/: upload-artifact.sh
src/cartesia/: __init__.py  _base_client.py  _client.py  _exceptions.py  _files.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  base_client.py  client.py  environment.py  pagination.py  version.py
src/cartesia/_utils/: _logs.py  _resources_proxy.py
src/cartesia/agents/: __init__.py  client.py
src/cartesia/api_status/: __init__.py  client.py
src/cartesia/auth/: __init__.py  client.py
src/cartesia/core/: client_wrapper.py
src/cartesia/datasets/: __init__.py  client.py
src/cartesia/embedding/: __init__.py
src/cartesia/fine_tunes/: __init__.py  client.py
src/cartesia/infill/: client.py
src/cartesia/lib/: _tts.py
src/cartesia/pronunciation_dicts/: __init__.py  client.py
src/cartesia/resources/: __init__.py  access_token.py  fine_tunes.py  infill.py  pronunciation_dicts.py  stt.py  tts.py  tts_websocket.py  voice_changer.py  voices.py  websocket.py
src/cartesia/stt/: __init__.py  _async_websocket.py  _websocket.py  client.py  socket_client.py
src/cartesia/tts/: __init__.py  _async_websocket.py  _websocket.py  client.py  socket_client.py
src/cartesia/types/: __init__.py  access_token_create_params.py  agent_list_phone_numbers_response.py  agent_list_response.py  agent_list_templates_response.py  agent_summary.py  agent_update_params.py  dataset.py  dataset_create_params.py  dataset_list_params.py  dataset_update_params.py  emotion.py  fine_tune.py  fine_tune_base_model.py  fine_tune_create_params.py  fine_tune_list_params.py  fine_tune_list_voices_params.py  gender.py  gender_presentation.py  generation_config.py  generation_config_param.py  generation_request.py  generation_request_param.py  infill_create_params.py  infill_model.py  localize_dialect.py  localize_target_language.py  model_speed.py  mp3_output_format_param.py  phoneme_timestamps.py  pronunciation_dict.py  pronunciation_dict_create_params.py  pronunciation_dict_item.py  (+36 more)
src/noah_testing/: __init__.py  _base_client.py  _client.py  _exceptions.py  _files.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  pagination.py
test/: async_websockets.py  utils.py
tests/: conftest.py  test_client.py  test_deepcopy.py  test_deprecated.py  test_dispatcher.py  test_extract_files.py  test_files.py  test_integration.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_send_queue.py  test_streaming.py  test_transform.py  test_tts.py  utils.py
tests/api_resources/: test_access_token.py  test_agents.py  test_client.py  test_datasets.py  test_fine_tunes.py  test_infill.py  test_my_websocket.py  test_pronunciation_dicts.py  test_stt.py  test_tts.py  test_tts_websocket.py  test_voice_changer.py  test_voices.py  test_websocket.py
tests/custom/: test_client.py
tests/lib/: test_client_attribution.py  test_client_custom_code_patches.py  test_integration.py  test_tts.py  test_websocket_context_timeout.py
tests/test_utils/: test_datetime_parse.py  test_json.py  test_path.py  test_proxy.py  test_typing.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+407 files in other folders)
