[project]
name = "cartesia"
version = "1.1.0"
description = "The official Python library for the Cartesia API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.10.10",
    "httpx>=0.27.2",
    "iterators>=0.2.0",
    "requests>=2.32.3",
    "websockets>=13.1",
]

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "numpy>=2.0.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
    "setuptools>=75.2.0",
    "twine>=5.1.1",
    "wheel>=0.44.0",
    "tomlkit>=0.13.2",
]

[tool.ruff]
# Add more rule codes as needed
lint.extend-select = [
    "D", # pydocstyle - to replace docformatter
]

# Ignore specific rules
lint.ignore = [
    "E731", # Do not assign a lambda expression, use a def
    # "W503",  # Line break before binary operator - seems this has been removed in v0.3.7
    "E741", # Do not use variables named 'l', 'O', or 'I'
    "E203", # Whitespace before ':'
    "E266", # Too many leading '#' for block comment
    "E501", # Line too long (TODO: remove this once code has been refactored for other things)
    "W605", # Invalid escape sequence
    "F401", # Ignore unused imports in __init__.py

    # Docstring Rules to Ignore
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
    "D205", # 1 Blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line (to allow google style docstrings)
    "D417", # Missing argument description
]

# Exclude specific files and patterns
exclude = [
    "setup.py",
    "tests/*",
    "^.*https?://.*$", # Long URLs in comments
    "^.*figure.*$",
]

# Set the maximum line length
line-length = 100

# Enable the count of violations
output-format = "full"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
