[project]
name = "cartesia"

[tool.poetry]
name = "cartesia"
version = "2.0.0"
description = ""
readme = "README.md"
authors = []
keywords = []

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
packages = [
    { include = "cartesia", from = "src"}
]

[project.urls]
Repository = 'https://github.com/cartesia-ai/cartesia-python'

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.10.10"
audioop-lts = { version = "0.2.1", python = "^3.13"}
httpx = ">=0.21.2"
httpx-sse = "0.4.0"
iterators = ">=0.2.0"
pydantic = ">= 1.9.2"
pydantic-core = "^2.18.2"
pydub = ">=0.25.1"
typing_extensions = ">= 4.0.0"
websockets = ">=10.4"

[tool.poetry.dev-dependencies]
mypy = "1.0.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"
types-python-dateutil = "^2.9.0.20240316"
numpy = ">=1.2.1"
ruff = "^0.5.6"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
